<resources>

    <!-- Main activity -->
    <string name="app_name">Weather</string>
    <string name="city_name_main_screen">Novosibirsk</string>
    <string name="searchButtonText">Settings</string>
    <string name="site">Browser</string>

    <!-- Main activity menu -->
    <string name="refresh">refresh</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>

    <!-- Weather settings activity -->
    <string name="Back">Back</string>
    <string name="other">Other</string>
    <string name="cities">Cities</string>
    <string name="set_view_parameters">Set view parameters</string>
    <string name="other_city_placeholder">Enter city…</string>
    <string name="city_name">City name</string>

    <!-- Dictionaries -->
    <string name="wind_speed">Wind speed</string>
    <string name="air_pressure">Pressure</string>
    <string name="air_humidity">Humidity</string>
    <string name="novosibirsk">Novosibirsk</string>
    <string name="moscow">Moscow</string>
    <string name="saint_petersburg">St. Petersburg</string>

    <!-- Toasts -->
    <string name="updated">Updated</string>
    <string name="setings_updated">Settings updated successfully</string>

    <!-- Cities -->
    <string-array name="city_name">
        <item>saint_petersburg</item>
        <item>moscow</item>
        <item>novosibirsk</item>
    </string-array>

</resources>