<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/weather_settings_title_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/set_view_parameters" />

        <Switch
            android:id="@+id/weather_settings_wind_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/wind_speed" />

        <Switch
            android:id="@+id/weather_settings_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/air_pressure" />

        <Switch
            android:id="@+id/weather_settings_humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/air_humidity" />

        <TextView
            android:id="@+id/weather_settings_title_cities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cities" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weather_settings_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weather_settings_input_city_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city_name"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/weather_settings_button_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Back" />

    </LinearLayout>
</ScrollView>