<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".WeatherWidgetFragment">

    <LinearLayout
        android:id="@+id/weather_widget_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/activity_main_temperature">

        <LinearLayout
            android:id="@+id/activity_main_linear_layout_humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="parent">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="16dp"
                android:text="@string/air_humidity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="98%" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_main_linear_layout_wind_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/activity_main_linear_layout_humidity">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="16dp"
                android:text="@string/wind_speed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_main_linear_layuot_pressure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_linear_layout_wind_speed">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="16dp"
                android:text="@string/air_pressure" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="765" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>